# pillar

./: .env.example  .gitattributes  .gitignore  INFRASTRUCTURE.md  NOTICE  README.md  docker-compose.yml  upload-knowledge.ts
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.backend-base  Dockerfile.discord-gateway  Dockerfile.worker  Dockerfile.worker-base  README.md  discord-gateway-healthcheck.py  gunicorn.conf.py  hatchet-worker-healthcheck.py  manage.py  pyproject.toml  worker.py  worker_config.py
backend/.deepeval/: .deepeval_telemetry.txt
backend/apps/: __init__.py
backend/apps/agent_score/: admin.py  constants.py  generate_openclaw_config.py  serializers.py  throttles.py  urls.py  utils.py  views.py
backend/apps/agent_score/analyzers/: __init__.py  accessibility.py  base.py  data_quality.py  discovery.py  interactability.py  permissions.py  readability.py  scoring.py  signup_test.py  webmcp.py
backend/apps/agent_score/management/: __init__.py
backend/apps/agent_score/migrations/: 0001_initial.py  0002_agentscorereport_content_signal_and_more.py  0003_signup_test_fields.py  0004_add_completed_layers.py  0005_add_scan_notes.py  0006_consolidate_to_4_categories.py  0007_add_cache_lookup_index.py  0008_add_signup_test_status.py  0009_add_check_status.py  0010_add_redirect_tracking.py  0011_add_category_scores_json.py  0012_openclaw_test_fields.py  0013_add_openclaw_check_category.py  0014_add_log_entry_model.py  0015_alter_agentscorecheck_category_and_more.py  0016_rename_content_interaction_to_rules.py  0017_add_email_sent_at.py  0018_alter_agentscorecheck_category.py
backend/apps/agent_score/models/: __init__.py  check.py  log_entry.py  report.py
backend/apps/agent_score/services/: completion_hooks.py  email_service.py
backend/apps/agent_score/tests/: conftest.py  test_analyzers_accessibility.py  test_analyzers_discovery.py  test_analyzers_interactability.py  test_analyzers_permissions.py  test_analyzers_readability.py  test_analyzers_scoring.py  test_analyzers_webmcp.py  test_constants.py  (+4 more)
backend/apps/analytics/: admin.py  apps.py  middleware.py  serializers.py  urls.py  views.py  viewsets.py
backend/apps/billing/: __init__.py  admin.py  constants.py  enforcement.py  metering.py  models.py  notifications.py  services.py  urls.py  views.py  webhooks.py
backend/apps/demos/: __init__.py  apps.py
backend/apps/identity/: admin.py  admin_views.py  apps.py  models.py  serializers.py  services.py  urls_admin.py  urls_public.py  views.py
backend/apps/knowledge/: __init__.py  admin.py  apps.py  signals.py
backend/apps/mcp/: __init__.py  apps.py  urls.py  views_api.py
backend/apps/mcp_oauth/: admin.py  apps.py  auth.py  discovery.py  inbound.py  models.py  outbound.py  pkce.py  serializers.py  token_client.py  urls.py  validators.py  views.py
backend/apps/products/: admin.py  middleware.py  public_urls.py  serializers.py  signals.py  urls.py  views.py
backend/apps/tools/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  views_oauth.py
backend/apps/users/: __init__.py  admin.py  apps.py  permissions.py  urls.py
backend/common/: __init__.py  apps.py  auth_views.py  cache_keys.py  consumers.py  exceptions.py  fields.py  hatchet_client.py  logging.py  pagination.py  redis_semaphore.py  routing.py  serializers.py  task_router.py  throttles.py
backend/common/health/: urls.py  views.py
backend/common/migrations/: 0001_initial.py  0002_add_knowledge_chunk_and_edge.py  0003_migrate_article_relationships.py  0004_update_related_names.py  0005_waitlistentry.py  0006_add_heard_about_us_to_waitlist.py  0007_alter_knowledgechunk_id_alter_knowledgegraphedge_id_and_more.py
backend/common/models/: __init__.py  base.py  embeddings.py  knowledge_chunk.py  knowledge_graph_edge.py  waitlist.py
backend/common/observability/: __init__.py  file_exporter.py  tracing.py
backend/common/services/: __init__.py  audio_transcription.py  chunk_extraction_service.py  contact_email.py  credential_encryption.py  document_processor.py  embedding_service.py  knowledge_graph_service.py  markdown_to_tiptap.py  prompt_template_service.py  push.py  slack.py  subdomain_generator.py
backend/common/tests/: test_contact_view.py
backend/common/utils/: __init__.py  cors.py  django_rag_service.py  django_rag_service_async.py  embedding_cache.py  firecrawl_service.py  json_parser.py  llm_client.py  llm_config.py  llm_resilience.py  markdown_chunker.py  organization.py  public_storage.py  reranker_service.py  storage.py  tiptap_to_markdown.py  token_budget.py
backend/common/views/: __init__.py  contact.py  early_access.py
backend/config/: __init__.py  admin_redis.py  admin_views.py  asgi.py  asgi_mcp.py  urls.py  urls_mcp.py  wsgi.py
backend/config/settings/: base.py  cloud_dev.py  development.py  e2e.py  mcp.py  production.py  test.py
backend/fixtures/: dev_pillar-help.json
backend/openclaw_config/: openclaw.json
backend/scripts/: setup_local_db.sh  setup_local_db.sql  verify_common.py
backend/templates/admin/: redis_manager.html
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  conftest_deepeval.py  test_adapter_parity_e2e.py  test_adapter_persistence_e2e.py  test_agent_eval.py  test_superset_agent_e2e.py
backend/tests/integration/: test_agent_api.py
backend/tests/test_billing/: conftest.py  test_constants.py  test_enforcement.py  test_integration.py  test_services.py  test_views.py  test_webhooks.py
backend/tests/test_common/: test_cors.py  test_embedding_service.py  test_knowledge_chunk.py  test_knowledge_graph_edge.py  test_llm_reasoning_filter.py  test_llm_resilience.py  test_logging.py  test_markdown_to_tiptap.py  test_tiptap_to_markdown.py
backend/tests/test_services/: __init__.py  test_action_context_filtering.py  test_agent_config.py  test_audio_transcription.py  test_chunk_extraction_service.py  test_document_processor.py  test_knowledge_graph_service.py  test_knowledge_rag_e2e.py  test_knowledge_rag_service.py  test_tool_registry_evolution.py
backend/tests/test_workflows/: test_process_item_async.py
(+1732 files in other folders)
